feat: resource crud
