# app/Http/Requests/Api/V1/Resources/FindAllResourceRequest.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Http\Requests\Api\V1\Resources;
+
+use Illuminate\Contracts\Validation\ValidationRule;
+use Illuminate\Foundation\Http\FormRequest;
+
+class FindAllResourceRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     */
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, ValidationRule|array<mixed>|string>
+     */
+    public function rules(): array
+    {
+        return [
+            'per_page'=>['sometimes','integer','min:1','max:100'],
+            'page'=>['sometimes','integer','min:1'],
+            'sort_by'=>['sometimes','in:id,title,created_at,updated_at'],
+            'order'=>['sometimes','in:asc,desc'],
+            'q'=>['sometimes','string'],
+        ];
+    }
+}
