# app/Services/Interfaces/ResourceServiceInterface.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Services\Interfaces;
+
+use App\Models\Resource;
+use Illuminate\Pagination\LengthAwarePaginator;
+
+interface ResourceServiceInterface
+{
+    public function findAll(?int $perPage = 15, ?string $sortBy = null, ?string $order = null, ?string $q = null): LengthAwarePaginator;
+
+    public function findById(int $id): Resource;
+
+    public function editById(int $id, Resource $resource): Resource;
+
+    public function destroyById(int $id): void;
+
+    public function create(Resource $resource): void;
+}
